[gd_scene load_steps=6 format=3 uid="uid://bba70gevx60gc"]

[ext_resource type="PackedScene" uid="uid://scqqvkrtqv7b" path="res://scenes/prototypes/generator/prototype_generator.tscn" id="1_856ih"]
[ext_resource type="Script" path="res://scenes/user_interface/user_interface.gd" id="1_t0wxr"]
[ext_resource type="Script" path="res://scenes/user_interface/stardust_lable.gd" id="2_waxxs"]
[ext_resource type="PackedScene" uid="uid://cgf60hl873fn4" path="res://scenes/prototypes/clicker/prototype_clicker.tscn" id="3_cgvn1"]
[ext_resource type="PackedScene" uid="uid://hmlf2jk5lw0c" path="res://scenes/prototypes/upgrades/prototype_upgrades.tscn" id="5_fxx5a"]

[node name="UserInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t0wxr")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftPanel" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Navigator" type="Control" parent="HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPad" type="MarginContainer" parent="HBoxContainer/LeftPanel/VBoxContainer/Navigator"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/LeftPanel/VBoxContainer/Navigator/LeftPad"]
layout_mode = 2

[node name="PrototypeGeneratorLink" type="LinkButton" parent="HBoxContainer/LeftPanel/VBoxContainer/Navigator/LeftPad/VBoxContainer"]
layout_mode = 2
text = "Prototype Generator"

[node name="PrototypeClickerLink" type="LinkButton" parent="HBoxContainer/LeftPanel/VBoxContainer/Navigator/LeftPad/VBoxContainer"]
layout_mode = 2
text = "Prototype Clicker"

[node name="PrototypeUpgradesLink" type="LinkButton" parent="HBoxContainer/LeftPanel/VBoxContainer/Navigator/LeftPad/VBoxContainer"]
layout_mode = 2
text = "Prototype Upgrades"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/LeftPanel/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Resources" type="Control" parent="HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPad" type="MarginContainer" parent="HBoxContainer/LeftPanel/VBoxContainer/Resources"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/LeftPanel/VBoxContainer/Resources/LeftPad"]
layout_mode = 2

[node name="StardustLable" type="Label" parent="HBoxContainer/LeftPanel/VBoxContainer/Resources/LeftPad/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Stardust : <no_value>"
script = ExtResource("2_waxxs")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 16

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="MainView" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PrototypeGenerator" parent="HBoxContainer/MainView" node_paths=PackedStringArray("user_interface") instance=ExtResource("1_856ih")]
visible = false
layout_mode = 1
user_interface = NodePath("../../..")

[node name="PrototypeClicker" parent="HBoxContainer/MainView" node_paths=PackedStringArray("user_interface") instance=ExtResource("3_cgvn1")]
layout_mode = 1
user_interface = NodePath("../../..")
view = 1

[node name="PrototypeUpgrades" parent="HBoxContainer/MainView" node_paths=PackedStringArray("user_interface") instance=ExtResource("5_fxx5a")]
layout_mode = 1
user_interface = NodePath("../../..")
view = 2

[connection signal="pressed" from="HBoxContainer/LeftPanel/VBoxContainer/Navigator/LeftPad/VBoxContainer/PrototypeGeneratorLink" to="." method="_on_prototype_generator_link_pressed"]
[connection signal="pressed" from="HBoxContainer/LeftPanel/VBoxContainer/Navigator/LeftPad/VBoxContainer/PrototypeClickerLink" to="." method="_on_prototype_clicker_link_pressed"]
[connection signal="pressed" from="HBoxContainer/LeftPanel/VBoxContainer/Navigator/LeftPad/VBoxContainer/PrototypeUpgradesLink" to="." method="_on_prototype_upgrades_link_pressed"]
